# protocol_toolkit

./: .gitignore  CI_CHANGES_SUMMARY.md  CMakeLists.txt  CMakeLists.txt.old  CROSS_PLATFORM_RESTRUCTURING_PROPOSAL.md  PROJECT_STRUCTURE.md  README.md  SUBMODULE_USAGE.md  TIMER_INTEGRATION.md  TODO  TODO.md  TODO_echo_server_client.md  TYPE_SAFE_SERIALIZATION.md  VERSIONING.md  demo_arena_cleanup.sh  echo_client_sketch.c  echo_server_sketch.c  ev_loop_reqs.md  fix_modbus_files.py  goals.md  tags  test_client  test_library  test_library.c  test_main.c  test_serialize  test_submodule_CMakeLists.txt  timer_build.mk  update_modbus_buffers.py  update_modbus_buffers_v2.py
src/: BUILD_SUMMARY.md  CMAKE_BUILD_GUIDE.md  CMakeLists.txt  SUBMODULE_CONFIG.md
src/examples/: CMakeLists.txt  MODBUS_README.md  build_test.c  embedded_pattern_example.c  example_tcp_client.c  linux_example.c  modbus_tcp_client.c  modbus_tcp_server.c  modbus_test_client.c  simple_tcp_protothread.c  simple_timer_example.c  tcp_client_protothread_example.c  timer_example.c
src/examples/ethernetip/: CMakeLists.txt  ETHERNETIP_CIP_PROTOCOL_REFERENCE.md  README.md  eip_discovery_example.c  ethernetip_usage_example.c
src/examples/ethernetip/docs/: AB_SERVER_DESCRIPTION.md  ETHERNETIP_CIP_PROTOCOL_OUTLINE.md  ETHERNETIP_PROTOCOL_REFERENCE.md  OMRON_CIP_PROTOCOL_REFERENCE.md  protocol_toolkit_api_v4.md
src/examples/ethernetip/ethernetip_find_devices/: CMakeLists.txt  ethernetip_find_devices.c  ethernetip_find_devices.c.backup  ethernetip_find_devices_new.c
src/examples/howto/: CMakeLists.txt  arithmetic_protocol.c  arithmetic_protocol.h  client.c  crc.c  crc.h  howto.md  server.c
src/examples/modbus/: CMakeLists.txt  MODBUS_IMPLEMENTATION_GUIDE.md  README.md
src/examples/modbus/client/: CMakeLists.txt  README.md  (+3 more)
src/include/: protocol_toolkit.h  protocol_toolkit.h.in  ptk.h  ptk_alloc.h  ptk_array.h  ptk_async.h  ptk_atomic.h  ptk_buf.h  ptk_codec.h  ptk_config.h  ptk_connection.h  ptk_defs.h  ptk_err.h  ptk_ev_loop.h  ptk_event.h  ptk_log.h  ptk_mem.h  ptk_os_thread.h  ptk_pdu.h  ptk_pdu_custom.h  ptk_pdu_macros.h  ptk_safe_alloc.h  ptk_scratch.h  ptk_serialization.h  ptk_shared.h  ptk_slice.h  ptk_sock.h  ptk_socket.h  ptk_sync.h  ptk_task.h  ptk_thread.h  ptk_threadlet.h  ptk_timer.h  ptk_typed_alloc.h  ptk_typed_mem.h  ptk_types.h  ptk_utils.h
src/include/macos/: protocol_toolkit.h
src/lib/: CMakeLists.txt  modbus_codec.h  network_discovery.c  network_discovery.h  ptk.c  ptk_alloc.c  ptk_atomic.c  ptk_buf.c  ptk_codec.c  ptk_config.c  ptk_connection.c  ptk_err.c  ptk_event.c  ptk_event_loop.c  ptk_event_source.h  ptk_init.c  ptk_log.c  ptk_mem.c  ptk_mem_simple.c  ptk_os_thread.c  ptk_scratch.c  ptk_serialization.c  ptk_shared.c  ptk_socket.c  ptk_status.c  ptk_thread.c  ptk_time.c  ptk_timer.c  ptk_utils.c
src/lib/event_loop/: event_loop.c  event_loop.h  event_registration.c  event_registration.h  socket_common.c  socket_common.h  socket_common_new.c  socket_common_original.c  socket_internal.h  socket_tcp.c  socket_tcp.h  socket_udp.c  socket_udp.h  threadlet.c  threadlet.h  threadlet_integration.c  threadlet_integration.h  threadlet_scheduler.c  threadlet_scheduler.h  timeout_heap.c  timeout_heap.h
src/lib/linux/: README.md  address.c  linux_event_loop.c  linux_event_loop.h  linux_integration.c  protocol_toolkit.h  protocol_toolkit_linux.c  ptk_epoll.c  ptk_platform.h  ptk_sock_linux.c  sock.c  socket_integration.c  threadlet_api.c  threadlet_core.c  threadlet_core.h  threadlet_scheduler.c  threadlet_scheduler.h
src/lib/macos/: event_handling.c  event_loop.c  protothreads.c  socket.c  timer.c  user_events.c  utilities.c
src/lib/platform/: ptk_event_loop_platform_linux.c  ptk_event_loop_platform_macos.c
src/lib/posix/: atomic_operations.c  mem.c  network_list.c  os_thread_posix.c  ptk_event.c  ptk_socket_posix.c  ptk_task.c  ptk_time_posix.c  socket.c  thread.c
src/lib/test/: CMakeLists.txt  test_ptk_alloc.c  test_ptk_buf.c
src/lib/windows/: atomic_operations.c  os_thread_win.c
src/linux/: CMakeLists.txt
src/linux/src/: protocol_toolkit_impl.h.in  protocol_toolkit_linux.c
src/macos/: CMakeLists.txt  README_IMPLEMENTATION.md  build.sh
src/macos/cmake/: ProtocolToolkitConfig.cmake.in
src/macos/include/: protocol_toolkit.h
src/macos/src/: example_tcp_client.c  protocol_toolkit_impl.h.in  protocol_toolkit_macos.c
src/macos/tests/: CMakeLists.txt  test_basic_functionality.c  test_state_machine.c
src/protocol_toolkit/: CMakeLists.txt
src/protocol_toolkit/ev_loop/: CMakeLists.txt  ev_atomic.c  ev_buf.c  ev_log.c  ev_loop.c  ev_loop_common.h  ev_loop_epoll.c  ev_loop_iocp.c  ev_loop_kqueue.c  ev_loop_platform.h  ev_loop_reqs.md  ev_loop_threading.c
src/protocol_toolkit/include/: ev_atomic.h  ev_buf.h  ev_err.h  ev_log.h  ev_loop.h  ev_shared_mem.h  ev_thread.h  ev_utils.h  ptk_buf.h  ptk_err.h  ptk_shared_mem.h  ptk_thread.h
src/protocol_toolkit/lib/: ptk_shared_mem.c
src/protocols/ethernetip/: CMakeLists.txt
src/protocols/modbus/: CMakeLists.txt
src/tests/: CMakeLists.txt  README.md  demo_type_safe_serialize.c  test_basic_functionality.c  test_harness.c  test_parent_child_alloc.c  test_protothread_macros.c  test_ptk_alloc.c  test_ptk_array.c  test_ptk_array_comprehensive.c  test_ptk_atomic.c  test_ptk_atomic_comprehensive.c  test_ptk_buf.c  test_ptk_buf_comprehensive.c  test_ptk_config.c  test_ptk_config_comprehensive.c  test_ptk_err.c  test_ptk_err_comprehensive.c  test_ptk_event.c  test_ptk_h.c  test_ptk_log.c  test_ptk_log_comprehensive.c  test_ptk_mem.c  test_ptk_os_thread.c  test_ptk_os_thread_comprehensive.c  test_ptk_pdu.c  test_ptk_scratch.c  test_ptk_serialization.c  test_ptk_shared.c  test_ptk_slice.c  test_ptk_sock.c  test_ptk_sock_comprehensive.c  test_ptk_sock_udp.c  test_ptk_threadlet.c  test_ptk_types.c  test_ptk_utils.c  test_ptk_utils_comprehensive.c  test_state_machine.c  test_tcp_echo_abort.c  test_type_safe_serialize.c  (+1 more)
src/tools/: CMakeLists.txt
src/tools/ethernetip_find_devices/: ethernetip_find_devices.c
src/tools/modbus/: CMakeLists.txt
(+177 files in other folders)
